# kuberay-batch-inference

./: .env.example  .gitattributes  .gitignore  BRANCH_NOTE.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml
api/: Dockerfile  pyproject.toml
api/src/: __init__.py  app.py  auth.py  config.py  db.py  logging_config.py  main.py  models.py  observability.py  ray_client.py  storage.py
api/src/routes/: batches.py  health.py
api/tests/: conftest.py  test_auth.py  test_batches_get.py  test_batches_internals.py  test_batches_post.py  test_batches_results.py  test_config.py  test_db.py  test_e2e_failure_paths.py  test_e2e_happy_path.py  test_lifespan.py  test_main_health.py  test_models.py  test_observability.py  test_ray_client.py  test_ready.py  test_status_poller.py  test_storage.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_WALKTHROUGH.md  DEPLOYMENT_WALKTHROUGH.md  GPU_PROFILE.md  LOCAL_GPU_TUTORIAL.md  NOTES.md  PRESENTATION.md  SESSION_NOTES_FULL.md  SETUP.md  TECHNICAL_REPORT.md
docs/tutorial/: 01-foundation.md  02-python-and-ray-local.md  03-fastapi-postgres-poller.md  04-docker-and-kubernetes.md  05-kuberay.md  06-deep-understanding.md  07-gpu.md  08-production.md  09-teaching.md  README.md
inference/: Dockerfile  Dockerfile.gpu  requirements-gpu.txt  requirements.txt
inference/jobs/: batch_infer.py
k8s/api/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
k8s/kind/: kind-config.yaml
k8s/kuberay/: values.yaml
k8s/monitoring/: grafana-values.yaml  prometheus-values.yaml
k8s/postgres/: deployment.yaml  init-configmap.yaml  pvc.yaml  secret.yaml  service.yaml
k8s/raycluster/: raycluster.gpu.yaml  raycluster.yaml
k8s/storage/: shared-pvc.yaml
notebooks/: qwen_ray_data_demo.ipynb
scripts/: benchmark.py  demo-bugs.sh  demo.sh  down.sh  install-monitoring.sh  setup.sh  smoke-test.sh  up.sh
