[project]
name = "batch-api"
version = "0.1.0"
description = "FastAPI proxy for KubeRay batch inference"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Adrian Sebuliba" },
]

# Runtime dependencies - locked in uv.lock for reproducibility.
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "asyncpg>=0.29,<1",
    "aiosqlite>=0.20,<1",            # only used in tests
    "aiofiles>=24.1,<25",
    "ray[default]==2.54.1",
    "python-ulid>=3.0,<4",
    "httpx>=0.27,<1",
    "orjson>=3.10,<4",
]

[project.optional-dependencies]
# Dev / test / lint - installed via `uv sync --extra dev` or `pip install -e .[dev]`
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "anyio>=4.4,<5",
    "ruff>=0.6.0,<1",
    "mypy>=1.11,<2",
    "types-aiofiles",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ─── ruff ───────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # bugbear
    "SIM",       # simplify
    "C4",        # comprehensions
    "PT",        # pytest style
    "RUF",       # ruff-specific
    "PL",        # pylint (selected)
    "TCH",       # type-checking
    "TID",       # tidy imports
]
ignore = [
    "E501",      # line length - handled by formatter
    "PLR0913",   # too many args - pragmatic for config models
    "PLR2004",   # magic numbers - fine in tests
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately defer imports inside function bodies for env-var
# fixture setup, use `pytest.fixture` with parametrize-style patterns
# that ruff's PT rules flag, and import from ``src.`` with absolute
# paths which `TID252` cannot distinguish from intra-package relatives.
# Relaxing these rules for tests keeps the src/ standard strict while
# letting test patterns breathe.
"tests/**/*.py" = [
    "B",         # bugbear (test patterns often violate)
    "PLR",       # pylint refactor rules
    "PLC0415",   # import-outside-top-level - intentional in fixture setup
    "PT004",     # pytest-missing-fixture-name-underscore
    "PT012",     # pytest-raises-with-multiple-statements - intentional
    "PT019",     # pytest-fixture-param-without-value - false positives
    "TID252",    # relative-imports (tests can use `from src...`)
    "TC003",     # typing-only-std-lib - tests import for runtime use too
    "SIM108",    # if-else-block-instead-of-if-exp - test readability wins
    "SIM105",    # suppressible-exception - intentional broad except in tests
    "F401",      # unused-import - common when refactoring test scaffolding
    "RUF100",    # unused-noqa - moved targets during the refactor above
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy ───────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
# Ray has no type stubs; silence the ignore requirement there.
ignore_missing_imports = true
plugins = []

# ─── pytest ─────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic._internal",
]
