[project]
name = "batch-api"
version = "0.1.0"
description = "FastAPI proxy for KubeRay batch inference"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Adrian Sebuliba" },
]

# Runtime dependencies - locked in uv.lock for reproducibility.
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "asyncpg>=0.29,<1",
    "aiosqlite>=0.20,<1",            # only used in tests
    "aiofiles>=24.1,<25",
    "ray[default]==2.54.1",
    "python-ulid>=3.0,<4",
    "httpx>=0.27,<1",
    "orjson>=3.10,<4",
    "prometheus-client>=0.20,<1",
]

[project.optional-dependencies]
# Dev / test / lint - installed via `uv sync --extra dev` or `pip install -e .[dev]`
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "anyio>=4.4,<5",
    "ruff>=0.6.0,<1",
    "mypy>=1.11,<2",
    "types-aiofiles",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ─── ruff ───────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # bugbear
    "SIM",       # simplify
    "C4",        # comprehensions
    "PT",        # pytest style
    "RUF",       # ruff-specific
    "PL",        # pylint (selected)
    "TCH",       # type-checking
    "TID",       # tidy imports
]
ignore = [
    "E501",      # line length - handled by formatter
    "PLR0913",   # too many args - pragmatic for config models
    "PLR2004",   # magic numbers - fine in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy ───────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
# Ray has no type stubs; silence the ignore requirement there.
ignore_missing_imports = true
plugins = []

# pytest config lives on main; demo branch has no test suite
# (see BRANCH_NOTE.md at repo root).
